Wed May  4 23:04:06 2011  John Haque      <j.eh@mchsi.com>

	Fix the problem (crash) with disappearing array argument when
	it is a subarray of another deleted array argument.

	* awk.h (struct exp_node): Nuke unused field sub.nodep.number.
	New field sub.nodep.rn.
	(parent_array): New definition for sub.nodep.rn to keep track
	of the parent of a subarray.
	* awkgram.y (mk_symbol): Initialize parent_array to NULL.
	* eval.c (r_interpret): In the case Op_sub_array, assign
	parent_array.
	* array.c (get_array): Initialize parent_array to NULL when
	a Node_var_new becomes a Node_var_array.
	(assoc_find): Add a fourth argument for the previous node
	of the returned bucket.
	(in_array, assoc_lookup): Adjust calls to assoc_find().
	(adjust_fcall_stack): New routine to change a soon-to-be deleted
	subarray parameter in the function call stack to a local array.
	(do_delete): Simplify code, remove recursive usage. Call
	adjust_fcall_stack() where appropriate.
	(do_delete_loop): Call adjust_fcall_stack() before clearing the
	array.
	(asort_actual): Don't accept an array and its subarray as
	arguments for asort() or asorti().
	(asort_actual, dup_table): For asort(), appropriately assign
	parent_array when creating the result array.
	* field.c (do_split, do_patsplit): An array and its subarray not
	accepted for the second and the fourth arguments. Remove
	unnecessary dupnode of the field seperator node.

	Unrelated:
	* awkgram.y (LEX_DELETE, simple_variable): Change type argument
	from Node_var_array to Node_var_new for calls to variable().
	* io.c (devopen): Fix parsing GAWK_MSEC_SLEEP env variable.

Mon May  2 23:44:34 2011  Arnold D. Robbins  <arnold@skeeve.com>

	* dfa.c (parse_bracket_exp): Sync with GNU grep, since we
	now require C 90, go ahead and put non-constant values into
	the array initializers.

Mon May  2 23:37:09 2011  Corinna Vinschen  <vinschen@redhat.com>

	* awk.h (small): Undef after include of <sigsegv.h> to compile
	builtin.c on Cygwin.
