@@ -1,0 +1,11 @@
+ 0
+ fy
+10 20
+20
+3 3
+3 3 3 3
+baz2 4
+3 3 3 3
+baz2 4
+gawk: nastyparm.awk:3: fatal: attempt to use array `baz (from b)' in a scalar context
+EXIT CODE: 2
