@@ -1,3 +1,8 @@
+Wed May  4 23:07:39 2011  Arnold D. Robbins  <arnold@skeeve.com>
+
+	* nastyparm.awk, nastyparm.ok: New files from John Haque.
+	* Makefile.am (nastyparm): New test.
+
 Wed May  4 23:03:06 2011  Arnold D. Robbins  <arnold@skeeve.com>
 
 	* delsub.awk, delsub.ok: New files.
