@@ -1,3 +1,9 @@
+Wed May  4 23:06:17 2011  John Haque      <j.eh@mchsi.com>
+
+	* eval.c (setup_frame): Handle a Node_var in stack. Fixes
+	a problem when a Node_var_new as param becomes Node_var during
+	expresssion evaluation for a subsequent param.
+
 Wed May  4 23:04:06 2011  John Haque      <j.eh@mchsi.com>
 
 	Fix the problem (crash) with disappearing array argument when
